--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "tsdx build --format cjs,esm,umd --name squegg",
     "test": "tsdx test",
     "lint": "tsdx lint",
+    "lint:fix": "tsdx lint --fix",
     "prepare": "tsdx build --format cjs,esm,umd --name squegg",
     "size": "size-limit",
     "analyze": "size-limit --why"
